about page overflow fix

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -64,15 +64,12 @@
 					padding-top: 20px;
 				}
 			}
-
 			.header-row{
 				padding: 0px 6px 10px;
 			}
 		}
-		.about-content, .location-and-press{
-			padding: 0px 6px;
-		}
-		.location-and-press{
+		.location-and-press {
+			padding: 0px 4px;
 			div:first-child{
 				padding-bottom: 40px;
 			}
